<resources>
    <string name="budInfo1">Hai superato la metà del budget a disposizione</string>
    <string name="budInfo2">Stai per esaurire il budget a disposizione</string>
    <string name="app_name">Applicazione_Lista_Regali</string>
    <string name="name">Nome</string>
    <string name="description">Descrizione</string>
    <string name="create">Crea</string>
    <string name="textCreate">Crea una nuova lista</string>
    <string name="inforequired">Il nome assegnato alla lista è già esistente</string>
    <string name="inforequired_2">Inserisci il nome della lista</string>
    <string name="inforequired_3">Riempire tutti i campi</string>
    <string name="inforequired_4">Inserisci un budget</string>
    <string name="cancella">Cancella</string>
    <string name="lista">Lista</string>
    <string name="budgetCap">BUDGET</string>
    <string name="budget">Budget</string>
    <string name="cerca">Cerca</string>
    <string name="fatto">fatto</string>
    <string name="back">back</string>
    <string name="text_1">Inserisci il nome della lista:</string>
    <string name="text_2">Inserisci una descrizione:</string>
    <string name="phonebook">Rubrica</string>
    <string name="hint_list_creation">Clicca qui per creare una nuova lista regali</string>
    <string name="hint_insert_contact">Aggiungi contatti dalla rubrica</string>
    <string name="elimina">Elimina</string>
    <string name="rinomina">Rinomina</string>
    <string name="dialog_text">Aggiungi regalo</string>
    <string name="prezzo">Prezzo</string>
    <string name="ok">Ok</string>
    <string name="modifica_budget">Modifica Budget</string>
    <string name="modifica">Modifica</string>
    <string name="totale_regali">N. regali:\t</string>
    <string name="totale_prezzo">Tot. prezzo:\t</string>
    <string name="elimina_dialog">Sei sicuro di voler eliminare questa lista?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="b_superato">Hai superato il budget di :</string>
    <string name="b_allert">Hai superato il budget.\nPuoi controllare il tuo budget nella sezione dedicata in basso.</string>
    <string name="budget_corrente">Hai ancora a disposizione:</string>
    <string name="gifty">Gifty</string>
    <string name="euro">€</string>
    <string name="b_esaurito">Budget esaurito:</string>
    <string name="b_allert2">Budget esaurito.\nPuoi controllare il tuo budget nella sezione dedicata in basso.</string>
</resources>
