<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/modifica">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_text"
        android:layout_marginTop="10dp"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_price_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_name_layout"
        android:layout_marginTop="10dp"
        android:hint="@string/prezzo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="10">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/euro"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/input_price_layout"
        android:layout_alignBottom="@id/input_price_layout">
    </TextView>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square_button_shape"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:layout_below="@id/input_price_layout"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true">
    </Button>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_price_layout"
        android:text="@string/cancella"
        android:background="@drawable/square_button_shape"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp">
    </Button>

</RelativeLayout>