<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elimina_dialog"
        android:textSize="18sp"
        android:textStyle="bold">
    </TextView>


    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:background="@drawable/square_button_shape"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp">
    </Button>

    <Button
        android:id="@+id/si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si"
        android:background="@drawable/square_button_shape"
        android:layout_marginTop="50dp">
    </Button>

</RelativeLayout>