<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text"
        android:textSize="18sp"
        android:textStyle="bold">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gift_input_name_layout"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_text"
        android:layout_marginTop="10dp"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gift_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gift_input_price_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/prezzo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gift_input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gift_input_name_layout"
        android:text="@string/cancella"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="10dp">
    </Button>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gift_input_name_layout"
        android:text="@string/ok"
        android:backgroundTint="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp">
    </Button>

</RelativeLayout>