<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifica_budget"
        android:textSize="20sp"
        android:textStyle="bold">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budeget_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/budget"
        app:hintTextColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_below="@id/text">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:id="@+id/edit_budget"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/canc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square_button_shape"
        android:text="@string/cancella"
        android:textColor="@android:color/white"
        android:layout_below="@id/budeget_container"
        android:layout_marginTop="10dp">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modifica_btn"
        android:text="@string/ok"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/square_button_shape"
        android:layout_below="@id/budeget_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp">
    </Button>
</RelativeLayout>