<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ListCreationActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_container"
        android:hint="@string/name"
        app:hintTextColor="@color/colorPrimary">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_container"
        android:hint="@string/description"
        app:hintTextColor="@color/colorPrimary"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_description"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_container"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/addContacts"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/square_button_shape"
            android:src="@drawable/ic_import_contacts"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true">
        </ImageButton>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/contactsList"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/addContacts"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        android:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:text="@string/cancella">
    </Button>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_alignParentEnd='true'
        android:layout_alignParentBottom="true"
        android:text="@string/create">
    </Button>

</RelativeLayout>